[package]
name = "cache-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "0.32.7", features = ["tokio-comp", "json"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"]}
uuid = "1.18.1"
domain = { path = "../domain-lib" }
serde = "1.0.228"
serde_json = "1.0.145"
