[package]
name = "cache-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "1.1.0", features = ["tokio-comp", "json"] }
uuid = { version = "1.23.0", features = ["v4"] }
domain = { path = "../domain-lib" }
serde_json = "1.0.149"
chrono = "0.4.44"
tokio = { version = "1.50.0", features = ["time"] }
